[tool.poetry]
name = "pyasync-orm"
version = "0.1.0"
description = "An async ORM."
authors = ["Ron Williams <rnwprogramming@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
inflection = "^0.5.1"
asyncpg = {version = "^0.23.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
ipython = {version = "^7.23.0", python = "^3.7", optional = true}
pytest-asyncio = "^0.15.1"
asyncpg = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
